# Generated by Django 4.2.7 on 2026-01-22 01:38

from django.conf import settings
from django.db import migrations, models
import django.db.models.deletion
import uuid


class Migration(migrations.Migration):

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
        ('editor', '0005_add_tutor_profile'),
    ]

    operations = [
        migrations.AddField(
            model_name='student',
            name='created_by',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='students_created', to=settings.AUTH_USER_MODEL, verbose_name='Creado por'),
        ),
        migrations.AddField(
            model_name='student',
            name='emergency_contact',
            field=models.CharField(blank=True, max_length=100, verbose_name='Contacto de Emergencia'),
        ),
        migrations.AddField(
            model_name='student',
            name='emergency_phone',
            field=models.CharField(blank=True, max_length=30, verbose_name='Teléfono de Emergencia'),
        ),
        migrations.AddField(
            model_name='student',
            name='institution',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='students_direct', to='editor.institution', verbose_name='Institución'),
        ),
        migrations.AddField(
            model_name='student',
            name='notes',
            field=models.TextField(blank=True, help_text='Notas internas sobre el estudiante', verbose_name='Notas'),
        ),
        migrations.AddField(
            model_name='student',
            name='tutor',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='assigned_students', to=settings.AUTH_USER_MODEL, verbose_name='Tutor Asignado'),
        ),
        migrations.AlterField(
            model_name='student',
            name='phone',
            field=models.CharField(blank=True, max_length=30, verbose_name='Teléfono'),
        ),
        migrations.AlterField(
            model_name='student',
            name='student_id',
            field=models.CharField(help_text='Matrícula o código único', max_length=50, unique=True, verbose_name='ID de Estudiante'),
        ),
        migrations.CreateModel(
            name='StudentGroup',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('name', models.CharField(max_length=100, verbose_name='Nombre del Grupo')),
                ('code', models.CharField(help_text='Código único del grupo (ej: G1-2026)', max_length=20, verbose_name='Código')),
                ('description', models.TextField(blank=True, verbose_name='Descripción')),
                ('academic_year', models.CharField(max_length=20, verbose_name='Año Académico')),
                ('semester', models.CharField(blank=True, help_text='Ej: Primer Semestre, Segundo Trimestre', max_length=50, verbose_name='Semestre/Período')),
                ('status', models.CharField(choices=[('active', 'Activo'), ('inactive', 'Inactivo'), ('archived', 'Archivado')], default='active', max_length=20, verbose_name='Estado')),
                ('max_students', models.PositiveIntegerField(default=30, verbose_name='Máximo de Estudiantes')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Fecha de Creación')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Última Actualización')),
                ('created_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='groups_created', to=settings.AUTH_USER_MODEL, verbose_name='Creado por')),
                ('institution', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='student_groups', to='editor.institution', verbose_name='Institución')),
                ('tutor', models.ForeignKey(help_text='Tutor responsable del grupo', on_delete=django.db.models.deletion.CASCADE, related_name='managed_groups', to=settings.AUTH_USER_MODEL, verbose_name='Tutor')),
            ],
            options={
                'verbose_name': 'Grupo de Estudiantes',
                'verbose_name_plural': 'Grupos de Estudiantes',
                'ordering': ['institution', 'academic_year', 'name'],
                'unique_together': {('institution', 'code')},
            },
        ),
        migrations.AddField(
            model_name='student',
            name='group',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='students', to='editor.studentgroup', verbose_name='Grupo'),
        ),
    ]
